--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "cross-env": "^5.0.1",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4"
+    },
+    "dependencies": {
+        "jquery": "^3.4.1"
     }
 }
